# bookkeeper

./: .asf.yaml  .dlc.json  .gitignore  .htaccess  .travis.yml  .typos.toml  0001-disableEnsembleChanges-test-patch.patch  CHANGES.txt  CHECKLIST_COMPLETAMENTO.md  CODE_COMPARISON_SIDEBYSIDE.md  COMPARATIVE_ANALYSIS_MOCKSTUB_VS_LLM.md  COMPLETION_ALL_STEPS_DONE.md  CONTRIBUTING.md  Domande  EXECUTIVE_SUMMARY_FINAL.txt  EXECUTIVE_SUMMARY_TEST_COMPARISON.md  EsercizioPreliminare.md  FINAL_PROJECT_COMPLETION_SUMMARY.txt  FINAL_VALIDATION_SIGN_OFF.md  GITHUB_ACTIONS_ACTIVATION_GUIDE.md  Jenkinsfile  KEYS  LICENSE  MONITORING_STEP_3_GUIDE.md  NOTICE  PHASE4_PITEST_RESULTS.txt  PROJECT_COMPLETION_SUMMARY.md  README  README.md  README_TEST_COMPARISON_PACKAGE.md  RELEASING.md  REPORT_TESTING_FRAMEWORK.md  TESTING_FRAMEWORK_CONFIGURATION.md  TESTING_QUICK_START.md  TEST_EXECUTION_REPORT.md  VISUAL_COMPARISON_SUMMARY.md  build.gradle  classes.txt  crowdin.yml  dep.txt  (+12 more)
bookkeeper-server/src/: CMakeLists.txt  JNIFlags.cmake  config.h.cmake
bookkeeper-server/src/main/java/org/apache/bookkeeper/auth/: AuthCallbacks.java  AuthProviderFactoryFactory.java  AuthToken.java  BookKeeperPrincipal.java  BookieAuthProvider.java  ClientAuthProvider.java  package-info.java
bookkeeper-server/src/main/java/org/apache/bookkeeper/bookie/: AbstractLogCompactor.java  BaseMetric.java  BaseMetricMonitor.java  BookKeeperServerStats.java  Bookie.java  BookieBean.java  BookieConnectionPeer.java  BookieCriticalThread.java  BookieException.java  BookieFileChannel.java  BookieImpl.java  BookieMXBean.java  BookieResources.java  BookieShell.java  BookieStateManager.java  BookieStatus.java  BookieThread.java  BufferedChannel.java  BufferedChannelBase.java  BufferedReadChannel.java  CacheCallback.java  CheckpointSource.java  CheckpointSourceList.java  Checkpointer.java  CompactableLedgerStorage.java  Cookie.java  CookieValidation.java  CronBasedCompactionJob.java  DefaultEntryLogger.java  DefaultFileChannel.java  DefaultFileChannelProvider.java  EntryKey.java  EntryKeyImpl.java  EntryKeyValue.java  EntryLocation.java  EntryLogCompactor.java  EntryLogManager.java  EntryLogManagerBase.java  EntryLogManagerForEntryLogPerLedger.java  EntryLogManagerForSingleEntryLog.java  (+64 more)
bookkeeper-server/src/main/java/org/apache/bookkeeper/client/: AsyncCallback.java  BKException.java  BatchedReadOp.java  BookKeeper.java  BookKeeper.java.orig  BookKeeperAdmin.java  BookKeeperBuilderImpl.java  BookKeeperClientStats.java  BookKeeperServerHealthInfo.java  BookieAddressResolverDisabled.java  BookieInfoReader.java  BookieWatcher.java  BookieWatcherImpl.java  BookiesHealthInfo.java  BookiesListener.java  CRC32CDigestManager.java  CRC32DigestManager.java  CachingBookieAddressResolver.java  ClientConnectionPeer.java  ClientContext.java  ClientInternalConf.java  ClientResources.java  DefaultBookieAddressResolver.java  DefaultEnsemblePlacementPolicy.java  DefaultSpeculativeRequestExecutionPolicy.java  DigestManager.java  DistributionSchedule.java  DynamicWeightedRandomSelectionImpl.java  EnsemblePlacementPolicy.java  EnsembleUtils.java  ExplicitLacFlushPolicy.java  ForceLedgerOp.java  ITopologyAwareEnsemblePlacementPolicy.java  LastAddSyncedManager.java  LedgerChecker.java  LedgerCreateOp.java  LedgerDeleteOp.java  LedgerEntry.java  LedgerFragment.java  LedgerFragmentReplicator.java  (+46 more)
bookkeeper-server/src/main/java/org/apache/bookkeeper/common/: package-info.java
bookkeeper-server/src/main/java/org/apache/bookkeeper/conf/: AbstractConfiguration.java  ClientConfiguration.java  Configurable.java  DbLedgerStorageConfiguration.java  ServerConfiguration.java  UncheckedConfigurationException.java  package-info.java
bookkeeper-server/src/main/java/org/apache/bookkeeper/discover/: BookieServiceInfo.java  BookieServiceInfoUtils.java  RegistrationClient.java  RegistrationManager.java  package-info.java  (+2 more)
bookkeeper-server/src/main/proto/: BookkeeperProtocol.proto  DataFormats.proto
bookkeeper-server/src/main/resources/: LICENSE.bin.txt  NOTICE.bin.txt  findbugsExclude.xml  log4j.properties  log4j2.xml
bookkeeper-server/src/test/java/: LifecycleComponentStackTest.java
bookkeeper-server/src/test/java/integration_testing/: ITLifecycleComponentStack.java  LifecycleListenerTestImpl.java
bookkeeper-server/src/test/java/org/apache/bookkeeper/: JaCoCoTestDiagnostic.java
bookkeeper-server/src/test/proto/: TestDataFormats.proto
bookkeeper-server/src/test/resources/: bk_server.conf  cacerts  client-cert.pem  client-key.jks  client-key.p12  client-key.pem  client.p12  create.certificates.sh  generateKeysAndCerts.sh  jaas_md5.conf  localhost.p12  log4j.properties  log4j2.xml  log4j_debug.properties  networkmappingscript.sh  server-cert.pem  server-key.jks  server-key.p12  server-key.pem  server.jks  test_entry_location_rocksdb.conf
bookkeeper-server/src/test/resources/conf/: default_rocksdb.conf  entry_location_rocksdb.conf  ledger_metadata_rocksdb.conf
bookkeeper-server/src/test/resources/org/powermock/extensions/: configuration.properties
branch-4.3/hedwig-client/src/main/cpp/test/: Makefile.am  main.cpp  messageboundtest.cpp  utiltest.cpp
hedwig-client/src/main/cpp/: Makefile.am  README  configure.ac
hedwig-client/src/main/cpp/inc/hedwig/: callback.h  client.h  exceptions.h  publish.h  subscribe.h
hedwig-client/src/main/cpp/lib/: Makefile.am  channel.cpp  channel.h  client.cpp  clientimpl.cpp  clientimpl.h  data.cpp  data.h  eventdispatcher.cpp  eventdispatcher.h  filterablemessagehandler.h  multiplexsubscriberimpl.cpp  publisherimpl.cpp  publisherimpl.h  simplesubscriberimpl.cpp  simplesubscriberimpl.h  subscriberimpl.cpp  subscriberimpl.h  util.cpp  util.h
hedwig-client/src/main/cpp/m4/: gtest.m4
hedwig-client/src/main/cpp/scripts/: log4cxx.conf  network-delays.sh  server-control.sh  tester.sh
hedwig-client/src/main/cpp/test/: Makefile.am  main.cpp  messageboundtest.cpp  messagefiltertest.cpp  multiplextest.cpp  publishtest.cpp  pubsubdatatest.cpp  pubsubtest.cpp  subscribetest.cpp  throttledeliverytest.cpp  util.h  utiltest.cpp
(+31539 files in other folders)
